setting up routing

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -2,9 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Challenge App</title>
+    <title>leckman | chat</title>
+    <link rel="stylesheet" type="text/css" href="index.css">
   </head>
   <body>
+    <div id="header" class='nav'></div>
     <div id="root"></div>
+    <div id="footer" class='nav'></div>
   </body>
 </html>
